[gd_scene load_steps=2 format=2]

[ext_resource path="res://TopBar.gd" type="Script" id=1]

[node name="TopBar" type="HBoxContainer"]
margin_right = 874.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Matchmake" type="Button" parent="."]
margin_right = 288.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "FIND A GAME"

[node name="Create" type="Button" parent="."]
margin_left = 292.0
margin_right = 580.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "HOST A GAME"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 584.0
margin_top = 2.0
margin_right = 874.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_right = 290.0
margin_bottom = 24.0
hint_tooltip = "Enter game code here"
size_flags_horizontal = 3
align = 1
placeholder_text = "Enter game code here"
caret_blink = true

[node name="Join" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 290.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "JOIN A GAME"
[connection signal="pressed" from="Matchmake" to="." method="_on_Matchmake_pressed"]
[connection signal="pressed" from="Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_Join_pressed"]
